[gd_scene load_steps=19 format=2]

[ext_resource path="res://MapTileSetLibrary.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://CoinsUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpriteLibrary.gd" type="Script" id=4]
[ext_resource path="res://ArsenalStats.gd" type="Script" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://AmmoUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://TimeLeftLabel.gd" type="Script" id=9]
[ext_resource path="res://Assets/UI/BluuNext-Bold.otf" type="DynamicFontData" id=10]
[ext_resource path="res://RandomDropSpawner.gd" type="Script" id=11]
[ext_resource path="res://Assets/Tiles/tile_0407.png" type="Texture" id=12]
[ext_resource path="res://RandomUpgradeSpawner.gd" type="Script" id=13]
[ext_resource path="res://Assets/Other/game_over.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4095, 105 )

[node name="Main" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HealthContainer" parent="GUI" instance=ExtResource( 7 )]

[node name="AmmoUI" parent="GUI" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = 210.0
margin_bottom = -4.0

[node name="TimeLeftLabel" type="Label" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 10.0
margin_right = -15.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "120"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesLeftLabel" type="Label" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.5
margin_right = 81.5
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Enemies: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsUI" parent="GUI" instance=ExtResource( 3 )]
margin_left = 399.0
margin_right = 1658.0
rect_scale = Vector2( 0.6, 0.6 )

[node name="CollectedUpgradesUI" type="HBoxContainer" parent="GUI"]
margin_left = 21.0
margin_top = 42.0
margin_right = 61.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeaponsUI" type="HBoxContainer" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = -62.9999
margin_right = 42.0
margin_bottom = -62.9999
grow_vertical = 0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyIndicator" type="TextureRect" parent="GUI"]
margin_left = 21.0
margin_top = 84.0
margin_right = 61.0
margin_bottom = 124.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GUI"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeDescription" type="Label" parent="GUI/CenterContainer"]
margin_left = 522.0
margin_top = 59.0
margin_right = 738.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 3 )
text = "Description"
align = 1
valign = 1

[node name="GameOverScreen" type="TextureRect" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GUI/GameOverScreen"]

[node name="ArsenalStats" type="ResourcePreloader" parent="."]
script = ExtResource( 5 )

[node name="SpriteLibrary" type="ResourcePreloader" parent="."]
script = ExtResource( 4 )

[node name="MapGenerator" type="ResourcePreloader" parent="."]
script = ExtResource( 1 )

[node name="RandomDropSpawner" type="ResourcePreloader" parent="."]
script = ExtResource( 11 )

[node name="RandomUpgradeSpawner" type="ResourcePreloader" parent="."]
script = ExtResource( 13 )

[node name="DoppelgangerSpawnTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -357, 210 )

[node name="Map" type="Node2D" parent="."]
position = Vector2( 0, -420 )

[node name="DeathPlane" type="Area2D" parent="." groups=[
"plane",
]]
position = Vector2( -210, 315 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathPlane"]
position = Vector2( 3171, 210 )
shape = SubResource( 4 )

[node name="WholeMapCamera" type="Camera2D" parent="."]
position = Vector2( 1554, -840 )
zoom = Vector2( 3, 3 )
[connection signal="timeout" from="DoppelgangerSpawnTimer" to="." method="_on_DoppelgangerSpawnTimer_timeout"]
[connection signal="ammo_changed" from="Player" to="GUI/AmmoUI" method="_on_Player_ammo_changed"]
[connection signal="has_key_changed" from="Player" to="." method="_on_Player_has_key_changed"]
[connection signal="health_changed" from="Player" to="GUI/HealthContainer" method="_on_Player_health_changed"]
[connection signal="num_coins_changed" from="Player" to="GUI/CoinsUI" method="_on_Player_num_coins_changed"]
[connection signal="player_killed" from="Player" to="." method="_on_Player_player_killed"]
[connection signal="spawn_bullet" from="Player" to="." method="_on_Player_spawn_bullet"]
[connection signal="body_entered" from="DeathPlane" to="." method="_on_DeathPlane_body_entered"]
